--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ ScaffoldingReadMe.txt
 # StyleCop
 StyleCopReport.xml
 
+# Files built by Rider
+*.idea
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
